--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -136,12 +136,13 @@ layers:
                         highway-casing4:
                             visible: false
                     highway-tunnel-z17-18:
-                        filter: { $zoom: { min: 16 } }
+                        filter: { not: { is_link: yes }, $zoom: { min: 16 } }
                         draw:
                             lines:
                                 width: [[16,5px],[17,12px],[18,15px],[19,28px]]
                                 outline:
                                     width: [[16,1.5px],[17,2px],[18,6px],[19,9px]]
+
 
             # Show 0 width roads one zoom before they have width, so they can scale up instead of popping in
             highway-z17:
