adding primary routes and secondary roads

--- a/styles/lines.yaml
+++ b/styles/lines.yaml
@@ -2,7 +2,7 @@ styles:
     lines-coast:
         base: lines
         texcoords: true
-        animated: false
+        animated: true
         blend: add
         shaders:
             defines:
