--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -186,15 +186,32 @@ layers:
                     outline:
                         color: [[8,[0.278,0.499,0.667]],[12,[0.329,0.588,0.784]]]
                         width: 0.3px
-            major_road-trunk_primary:
+            trunk_primary:
                 filter: { highway: [trunk, primary] }
                 draw:
                     lines:
                         color: [0.086,0.135,0.260]
-                        width: [[8,0.1px],[9,0.1px],[11,0.1px],[12,0.75px],[13,1px],[14,2px],[15,3px]]
+                        width: [[8,0.1px],[9,0.1px],[11,0.1px],[12,0.75px],[13,1px],[14,2px],[15,5px],[16,7px],[17,9px]]
                         outline:
                             color: [[8,[0.329,0.588,0.784]],[11,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
-                            width: [[8,0.25px],[10,0.3px],[11,0.3px],[12,0.75px]]
+                            width: [[8,0.25px],[10,0.3px],[11,0.3px],[12,0.75px],[13,1px],[17,1.25px]]
+                routes:
+                    filter: { ref: true }
+                    draw:
+                        lines:
+                            width: [[8,0.1px],[9,0.1px],[11,0.1px],[12,0.75px],[13,1px],[14,2px],[15,5px],[16,7px],[17,9px]]
+                            outline:
+                                color: [[8,[0.329,0.588,0.784]],[11,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
+                                width: [[8,0.25px],[10,0.3px],[11,0.3px],[12,0.75px],[13,1px],[17,1.25px]]
+            # secondary:
+            #     filter: { highway: secondary }
+            #     draw:
+            #         lines:
+            #             color: red
+            #             width: 2px
+            #             outline:
+            #                 color: yellow
+            #                 width: 1px
 
 styles:
     highway-dashed:
