--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -84,10 +84,10 @@ layers:
                     filter: { is_link: yes } # on- and off-ramps, etc
                     draw:
                         lines:
-                            width: [[8,0px],[9,0px],[11,0.25px],[12,0.25px],[13,1px],[14,1.5px],[15,2px],[17,3px]]
+                            width: [[8,0px],[9,0px],[11,0.25px],[12,0.25px],[13,1px],[14,1.5px],[15,2px],[17,3px],[18,9px],[19,12px]]
                             outline:
                                 color: [0.481,0.842,0.890]
-                                width: [[8,0px],[9,0.5px],[15,1px]]
+                                width: [[8,0px],[9,0.5px],[15,1px],[18,1.5px]]
                         highway-dashed:
                             visible: false
                         highway-casing1:
@@ -190,28 +190,28 @@ layers:
                 filter: { highway: [trunk, primary] }
                 draw:
                     lines:
-                        color: [0.086,0.135,0.260]
-                        width: [[8,0.1px],[9,0.1px],[11,0.1px],[12,0.75px],[13,1px],[14,2px],[15,5px],[16,7px],[17,9px]]
+                        color: [[8,[0.418,0.754,0.736]],[12,[0.418,0.754,0.736]],[13,[0.086,0.135,0.260]]]
+                        width: [[8,0.25px],[9,0.3px],[11,0.5px],[12,0.75px],[13,0.1px],[14,2px],[15,5px],[16,6px],[17,9px],[18,16px],[19,27px]]
                         outline:
-                            color: [[8,[0.329,0.588,0.784]],[11,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
-                            width: [[8,0.25px],[10,0.3px],[11,0.3px],[12,0.75px],[13,1px],[17,1.25px]]
+                            color: [[8,[0.329,0.588,0.784]],[13,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
+                            width: [[8,0px],[12,0px],[13,0.6px],[14,0.75px],[15,1px],[17,1.25px],[18,1.5px]]
                 routes:
                     filter: { ref: true }
                     draw:
                         lines:
-                            width: [[8,0.1px],[9,0.1px],[11,0.1px],[12,0.75px],[13,1px],[14,2px],[15,5px],[16,7px],[17,9px]]
+                            width: [[8,0.25px],[9,0.3px],[11,0.5px],[12,2px],[13,0.1px],[14,2px],[15,5px],[16,7px],[17,9px]]
                             outline:
                                 color: [[8,[0.329,0.588,0.784]],[11,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
-                                width: [[8,0.25px],[10,0.3px],[11,0.3px],[12,0.75px],[13,1px],[17,1.25px]]
-            # secondary:
-            #     filter: { highway: secondary }
-            #     draw:
-            #         lines:
-            #             color: red
-            #             width: 2px
-            #             outline:
-            #                 color: yellow
-            #                 width: 1px
+                                width: [[8,0px],[12,0px],[13,1px],[15,1.5px]]
+            secondary:
+                filter: { highway: secondary }
+                draw:
+                    lines:
+                        color: [[8,[0.418,0.754,0.736]],[12,[0.418,0.754,0.736]],[13,[0.086,0.135,0.260]]]
+                        width: [[8,0.25px],[9,0.3px],[11,0.5px],[12,0.75px],[13,0.1px],[14,1.5px],[15,5px],[16,6px],[17,9px]]
+                        outline:
+                            color: [[8,[0.329,0.588,0.784]],[11,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
+                            width: [[8,0px],[12,0px],[13,0.5px],[14,0.75px],[15,1px],[17,1.25px],[18,1.5px]]
 
 styles:
     highway-dashed:
