--- a/layers/buildings.yaml
+++ b/layers/buildings.yaml
@@ -6,13 +6,13 @@ layers:
         draw:
             polygons:
                 visible: false
-                # order: global.order
-                order: 6580
+                order: global.order
+                # order: 6580
                 color: [0.212,0.302,0.431]
             lines:
                 style: lines
-                # order: global.order-top
-                order: 6600
+                order: global.order-top
+                # order: 6600
                 visible: false
                 # color: [0.412,0.686,0.859]
                 color: [0.004,0.165,0.933]
