--- a/layers/earth.yaml
+++ b/layers/earth.yaml
@@ -20,38 +20,12 @@ layers:
 styles:
     earth-early:
         base: polygons
-        mix: [polygons-stripes]
+        mix: [polygons-diagonal-stripes]
         shaders:
             defines:
                 STRIPES_IN: 3.
                 STRIPES_OUT: 4.
                 STRIPES_MAX_ZOOM: 6.
-                STRIPES_PCT: 1.9
                 STRIPES_MIN: .9
                 STRIPES_MAX: -.2
                 STRIPES_SCALE: 2.5
-
-    # terrain:
-    #     base: polygons
-    #     raster: normal
-    #     shaders:
-    #         uniforms:
-    #             u_scale: 2 # higher values are more exaggerated
-    #             u_envmap: ../images/tron-terrain.jpg
-    #         blocks:
-    #             global: |
-    #                 vec4 terrainEnvmap (in sampler2D _tex, in vec3 _normal) {
-    #                     const vec3 eye = vec3(0.,0.,-1.);
-    #                     vec3 r = reflect(eye, _normal);
-    #                     r.z += 1.0;
-    #                     float m = 2. * length(r);
-    #                     vec2 uv = r.xy / m + .5;
-    #                     return texture2D(_tex, uv);
-    #                 }
-    #             color: |              
-    #                 // color = v_color;
-    #                 normal.z /= u_scale; // turn terrain exaggeration up/down
-    #                 normal = normalize(normal);
-    #                 color = terrainEnvmap(u_envmap, normal);
-                    
-    #                 // color *= v_color; // apply layer color to envmap
