--- a/layers/water.yaml
+++ b/layers/water.yaml
@@ -8,7 +8,7 @@ layers:
                 # color: [0.219, 0.226, 0.529]
                 color: [0.304,0.310,0.660]
 
-        water-later:
+        later:
             filter: { $zoom: { min: 13 } }
             draw:
                 polygons:
@@ -114,7 +114,7 @@ layers:
 styles:
     water:
         base: polygons
-        mix: [polygons-stripes]
+        mix: [polygons-diagonal-stripes]
         shaders:
             defines:
                 STRIPES_OUT: 12.
