--- a/layers/landuse.yaml
+++ b/layers/landuse.yaml
@@ -213,12 +213,19 @@ layers:
 styles:
     landuse:
         base: polygons
-        mix: [elevation-stripes]
+        mix: [functions-zoom, elevation-stripes]
         shaders:
             defines:
+                ZOOM_START: 0.
+                ZOOM_END: 13.
                 STRIPES_ALPHA: .5
                 STRIPES_SCALE: 40.
                 STRIPES_PCT: 1.8
+                STRIPES_WIDTH: mix( (1.-zoom()),
+                                    dot((sampleRaster(int(NORMAL_TEXTURE_INDEX)).rgb-.5)*2.,
+                                        STRIPES_DIR),
+                                    zoom())*STRIPES_PCT
+
     landuse-tier2-farm:
         mix: [functions-zoom, polygons-stripes]
         blend: overlay
