--- a/layers/buildings.yaml
+++ b/layers/buildings.yaml
@@ -35,7 +35,7 @@ layers:
             draw:
                 polygons:
                     visible: true
-                    style: buildings-wall
+                    style: buildings
                     color: [0.181,0.259,0.370]
                     # color: [0.592,0.827,0.851]
                     extrude: function() { return feature.height || 20; }
@@ -45,23 +45,41 @@ layers:
                     extrude: function() { return feature.height || 20; }
 
 styles:
-    buildings-wall:
+    buildings:
         base: polygons
-        mix: [functions-zoom, geometry-normal,generative-random]
+        mix: [functions-zoom, geometry-normal,generative-random, tron-palette]
         texcoords: true
         blend: add
         shaders:
             defines:
                 ZOOM_START: 16.
                 ZOOM_END: 20.
+                WALLLINES_COLOR: vec3(0.181,0.259,0.370)
             blocks:
                 color: |
                     if (isWall()) {
-                        float lineWidth = 0.003*(u_tile_origin.z/20.0);
+                        float r = 0.1+random(color.r)*.9;
+                        float g = 0.1+random(color.g)*.9;
+                        float b = 0.1+random(color.b)*.9;
+                        float z = zoom();
+                        
+                        float lineWidth = 0.003*z;
                         color = mix(vec4(0.),
-                                    color,
+                                    vec4(WALLLINES_COLOR,1.),
                                     1.0-(step(lineWidth,v_texcoord.x)-step(1.0-lineWidth,v_texcoord.x))*
                                         (step(lineWidth,v_texcoord.y)-step(1.0-lineWidth,v_texcoord.y)) );
+
+                        vec2 st = v_texcoord.xy;
+                        if (r > 0.5 ) st = vec2(v_texcoord.x, worldPosition().z*0.01);
+                        if (g > 0.5 ) st *= mix(10.,50.,random(g));
+                        if (b > 0.5 ) st.x += step(1., mod(st.y,2.0)) * 0.5;
+
+                        float n = random(floor(st));
+                        color = mix(color,
+                                    mix(vec4(WALLLINES_COLOR, n),
+                                        vec4(palette(r), 1.)*n,
+                                        z),
+                                    mix(.15,1.,z)-v_texcoord.y*.5);
                     } else {
                         color = vec4(0.);
                     }
