update buildings lines order

--- a/layers/buildings.yaml
+++ b/layers/buildings.yaml
@@ -11,7 +11,7 @@ layers:
                 color: [0.212,0.302,0.431]
             lines:
                 style: lines
-                order: global.order-top
+                order: global.order_add_1
                 # order: 6600
                 visible: false
                 # color: [0.412,0.686,0.859]
